# data-repetition

./: .gitignore  README.md  eval.py  mmlu.py  pyproject.toml  train.py  val.py
data/: convert_dolci.py  distill.py  intersect.py  prepare_gpqa.py  split.py  verify.py
scripts/: baselines.sh  neg.sh  pos.sh  train_distilled.sh  train_dolci.sh
